@startuml Development View
title Package Diagram

package "Characters" {
  class Player
  class Mob
  class Enemy
}

package "Items" {
  class Item
  class Weapon
  class Armor
  abstract class Potion
  class PotionHP(Potion)
  class PotionStrength(Potion)
}

package "Game Logic" {
  class Game
  abstract class Room
  class Shop(Room)
  class Dungeon(Room)
}

"Game Logic" --> Characters : controls
"Game Logic" --> Items : uses
Characters --> Items : uses

@enduml